--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
