--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,12 +49,11 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
     "aos": "^2.3.4",
+    "atropos": "^2.0.2",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "atropos": "^2.0.2"
-
+    "tailwindcss": "^3.3.3"
   },
   "browser": {
     "fs": false,
