--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "atropos": "^2.0.2",
     "fs-extra": "^11.1.1",
     "gsap": "^3.12.2",
+    "imagesloaded": "^5.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
