State Page Updates

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@react-spring/parallax": "^9.7.3",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.473",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "atropos": "^2.0.2",
+    "bootstrap": "^5.3.2",
     "fs-extra": "^11.1.1",
     "gsap": "^3.12.2",
     "imagesloaded": "^5.0.0",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
