--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
     "atropos": "^2.0.2",
     "bootstrap": "^5.3.2",
     "fs-extra": "^11.1.1",
     "gsap": "^3.12.2",
+    "gsap-trial": "^3.12.2",
     "imagesloaded": "^5.0.0",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
