--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,10 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@react-spring/parallax": "^9.7.3",
+    "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-<<<<<<< HEAD
-    "atropos": "^2.0.2",
-=======
->>>>>>> 79efdab83923ae372bbcc8e67e29926f6885ae2f
     "bootstrap": "^5.3.2",
     "fs-extra": "^11.1.1",
     "gsap": "^3.12.2",
