--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
